--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "migrate-to-uv"
-version = "0.8.0"
+version = "0.9.0-dev"
 edition = "2024"
 rust-version = "1.91"
 license = "MIT"
